feat: gestion des commandes et utilisateurs dans le back-office (EasyAdmin), reinitialisation de mot de passe

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -110,7 +110,7 @@
                         <h6 class="fw-bold">Liens rapides</h6>
                         <ul class="list-unstyled">
                             <li><a href="{{ path('app_home') }}" class="text-muted text-decoration-none">Accueil</a></li>
-                            <li><a href="{{ path('app_books') }}" class="text-muted text-decoration-none">Nos Livres</a></li>
+                            <li><a href="{{ path('app_catalogue') }}" class="text-muted text-decoration-none">Nos Livres</a></li>
                             {% if app.user %}
                                 <li><a href="{{ path('app_profile') }}" class="text-muted text-decoration-none">Mon Profil</a></li>
                             {% endif %}
