--- a/templates/profile/change_password.html.twig
+++ b/templates/profile/change_password.html.twig
@@ -14,7 +14,7 @@
                     {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
                     
                     <div class="alert alert-info" role="alert">
-                        <i class="fas fa-info-circle"></i>
+                        {{ ux_icon('tabler:info-circle') }}
                         Pour des raisons de sécurité, vous devez entrer votre mot de passe actuel avant de pouvoir le modifier.
                     </div>
 
